fix(action-select): remove empty space to be aligned center vertically

--- a/packages/components/action-select/src/action-select.css
+++ b/packages/components/action-select/src/action-select.css
@@ -5,3 +5,11 @@
 		cursor: pointer;
 	}
 }
+
+.relative {
+	position: relative;
+}
+
+.font-size-0 {
+	font-size: 0;
+}
